src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Ajustes básicos para que el layout ocupe toda la pantalla */
html,
body,
#root {
  height: 100%;
}

body {
  margin: 0;
  background-color: black;
}

@keyframes slideUp {
  from {
    transform: translateY(100%);
  }

  to {
    transform: translateY(0);
  }
}

.animate-slideUp {
  animation: slideUp 0.3s ease-out;
}

@keyframes slideUp {
  from {
    transform: translateY(100%);
  }

  to {
    transform: translateY(0);
  }
}

.animate-slideUp {
  animation: slideUp 0.3s ease-out;
}

